# kaentake

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  Custom.wz  beautyshop.cpp  bypass.cpp  constants.h  hook.h  injector.cpp  inlink.cpp  localize.cpp  localize_data.h  quickslots.cpp  resman.cpp  resolution.cpp  storagebag.cpp  stringpool.cpp  system.cpp  tooltip.cpp
